# verji-ai-agent

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT_AND_ENCRYPTION.md  IMPLEMENTATION_PLAN.md  PHASE1_PLAN.md  PHASE1_STATUS.md  README.md  Tiltfile  docker-compose.yml  setup-repo.sh
.claude/: settings.local.json
proto/: chatbot.proto
python-service/: README.md
rust-bot/: README.md
scripts/: dev.sh  gen-proto.sh  test-integration.sh
verji-vagent-bot/: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md
verji-vagent-bot/src/: client.rs  encryption.rs  main.rs  redis_client.rs  responder.rs  responder_manager.rs  session.rs
verji-vagent-bot/src/responders/: mod.rs  pingpong.rs  verji_agent.rs
verji-vagent-graph/: Dockerfile.dev  README.md  pyproject.toml  pytest.ini
verji-vagent-graph/src/: __init__.py  graph.py  main.py  types.py
verji-vagent-graph/tests/: __init__.py  conftest.py  test_checkpointer.py.old  test_checkpointer_simple.py  test_graph.py  test_room_context.py  test_types.py
