[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = "0.7"
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "rust-bot"
path = "src/main.rs"
