[package]
name = "verji-vagent-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Matrix SDK - LATEST VERSION with bundled SQLite
matrix-sdk = { version = "0.14", features = ["bundled-sqlite"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "verji-vagent-bot"
path = "src/main.rs"
