[package]
name = "verji-vagent-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Matrix SDK - Back to 0.14 with stack overflow fix
matrix-sdk = { version = "0.14", features = ["bundled-sqlite"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Redis for communication with vagent-graph
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Futures utilities (for StreamExt)
futures = "0.3"

[[bin]]
name = "verji-vagent-bot"
path = "src/main.rs"
